[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Scenes/Attacks/Explosion.anim" type="Animation" id=1]
[ext_resource path="res://src/Scenes/Attacks/Explosion.tres" type="SpriteFrames" id=2]
[ext_resource path="res://src/Scenes/Attacks/Projectile.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/PNG/blue_boxTick.png" type="Texture" id=4]
[ext_resource path="res://src/Scenes/Attacks/Bullet.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.99599

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 26
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1.70184, 0.862007 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 2 )
animation = "Explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explosion = ExtResource( 1 )

[node name="AttackData" type="Node" parent="."]
script = ExtResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
